# playpen-pf-mig-skills

./: .gitignore  .gitleaks.toml
agents/: adversary.md  bug-finder.md  comparison-report-generator.md  kantra-command-builder.md  kind-cluster.md  referee.md  repo-differ.md  runtime-validator.md  visual-captures.md  visual-compare.md  visual-fix.md
comparison-tool/: PLAN.md  README.md  TODO.md  pyproject.toml
comparison-tool/hack/: run-e2e.sh
comparison-tool/migeval/: __init__.py  bootstrap.py  cli.py  comparison.py  config.py  models.py  orchestrator.py  regression.py  workspace.py
comparison-tool/migeval/layers/: base.py  build.py  llm_review.py  runtime.py  source.py
comparison-tool/migeval/prompts/: __init__.py  build_analyze.md  challenger.md  consolidator.md  critic.md  judge.md  runtime_discover.md  source_bootstrap.md
comparison-tool/migeval/reporting/: json_report.py  markdown_report.py
comparison-tool/migeval/util/: agent.py  file_enum.py  llm.py  subproc.py
comparison-tool/slides/: Makefile  slides.html  slides.md  style.css
comparison-tool/targets/patternfly/: agent_hints.md  target.yaml
comparison-tool/targets/patternfly-bootstrap/: agent_hints.md  detectors.py  target.yaml
comparison-tool/targets/patternfly-codemods/: agent_hints.md  detectors.py  target.yaml
experiments/migration-skill-lightspeed-console-A/: .gitignore  .migration-20260415-094525.log.swp  README.md  clone.sh  goose.sh
goose/recipes/: README.md  migration.yaml
scripts/: claudeception.sh
skills/code-migration/: SKILL.md
skills/code-migration-inline/: SKILL.md
(+58 files in other folders)
